--- a/ChitalkaMVC/appsettings.json
+++ b/ChitalkaMVC/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbCon": "Server=(localdb)\\mssqllocaldb;Database=ChitalkaV2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbCon": "Server=(localdb)\\mssqllocaldb;Database=ChitalkaFinal;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
