--- a/ChitalkaMVC.Logic/ChitalkaMVC.Logic.csproj
+++ b/ChitalkaMVC.Logic/ChitalkaMVC.Logic.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,5 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ChitalkaMVC.Storage\ChitalkaMVC.Storage.csproj" />
   </ItemGroup>
-
+<ItemGroup>
+  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+</ItemGroup>
 </Project>
