--- a/ChitalkaMVC.Storage/ChitalkaMVC.Storage.csproj
+++ b/ChitalkaMVC.Storage/ChitalkaMVC.Storage.csproj
@@ -15,5 +15,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-
+<ItemGroup>
+  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+</ItemGroup>
+<ItemGroup>
+  <Folder Include="Migrations\" />
+</ItemGroup>
 </Project>
